[mantine.dev] Fix broken layout

--- a/apps/mantine.dev/src/components/Shell/Shell.module.css
+++ b/apps/mantine.dev/src/components/Shell/Shell.module.css
@@ -3,6 +3,9 @@
 }
 
 .content {
-  flex: 0 0 calc(100% - var(--docs-navbar-width) - var(--docs-table-of-contents-width));
-  max-width: calc(100% - var(--docs-navbar-width) - var(--docs-table-of-contents-width));
+  flex: 1;
+
+  @mixin smaller-than 1480px {
+    max-width: calc(100% - var(--docs-navbar-width) - var(--docs-table-of-contents-width));
+  }
 }
